--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Stickerz</title>
+        <title>Stickerz!</title>
         <link rel="icon" href="img/baby-yoda.svg">
+        <link rel="stylesheet" href="css/index.css">
     </head>
 
     <body>
-        <header>
+        
+        <header id="home">
             <nav>
                 <div class="logo">
                     Stickerz
@@ -85,5 +87,6 @@
                 <input type="submit">
             </form>
         </footer>
+        <p>Some contacts</p>
     </body>
 </html>
