--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
                     <a href="cart.html">Cart</a>
                 </div>
             </nav>
-            <section>
-                <h1>Welcome to <br>Stickerz</h1>
-                <p class="subheading">Best sticker shop in the World!</p>
-                <hr>
-                <p class="dicount-notice">Buy with discount today</p>
+            <section class="banner">
+                <h1>Stickerz!</h1>
                 <a href="#products" class="button">Buy now</a>
             </section>
         </header>
@@ -39,8 +36,8 @@
                     <h3>Baby Yoda</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias nemo et quasi recusandae ipsam. Ut molestiae, error dolores iste odit modi expedita cumque officia possimus? Reprehenderit harum natus aperiam ut.</p>
                     <div class="buttons">
-                        <button>Info</button>
-                        <button>Buy</button>
+                        <button class="button card-button">Info</button>
+                        <button class="button card-button">Buy</button>
                     </div>
                 </article>
                 <article class="product">
@@ -84,7 +81,7 @@
                     Your email:
                 <input type="email" name="user-email" placeholder="Your email" required>
                 </label>
-                <input type="submit">
+                <input class="button card-buttom" type="submit">
             </form>
         </footer>
         <p>Some contacts</p>
