--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </nav>
             <section class="banner">
                 <h1>Stickerz!</h1>
-                <a href="#products" class="button">Buy now</a>
+                <a href="#products" class="button">Shop now</a>
             </section>
         </header>
         <main>
@@ -45,8 +45,8 @@
                     <h3>Banana</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias nemo et quasi recusandae ipsam. Ut molestiae, error dolores iste odit modi expedita cumque officia possimus? Reprehenderit harum natus aperiam ut.</p>
                     <div class="buttons">
-                        <button>Info</button>
-                        <button>Buy</button>
+                        <button class="button card-button">Info</button>
+                        <button class="button card-button">Buy</button>
                     </div>
                 </article>
                 <article class="product">
@@ -54,8 +54,8 @@
                     <h3>Girl</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias nemo et quasi recusandae ipsam. Ut molestiae, error dolores iste odit modi expedita cumque officia possimus? Reprehenderit harum natus aperiam ut.</p>
                     <div class="buttons">
-                        <button>Info</button>
-                        <button>Buy</button>
+                        <button class="button card-button">Info</button>
+                        <button class="button card-button">Buy</button>
                     </div>
                 </article>
                 <article class="product">
@@ -63,25 +63,25 @@
                     <h3>Viking</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias nemo et quasi recusandae ipsam. Ut molestiae, error dolores iste odit modi expedita cumque officia possimus? Reprehenderit harum natus aperiam ut.</p>
                     <div class="buttons">
-                        <button>Info</button>
-                        <button>Buy</button>
+                        <button class="button card-button">Info</button>
+                        <button class="button card-button">Buy</button>
                     </div>
                 </article>
             </div>
         </main>
         <footer>
             <h2>Contacts</h2>
-            <form action="https://formspree.io/f/xqkwkqew" method="POST">
-                <label>
+            <form  class="contact-form" action="https://formspree.io/f/xqkwkqew" method="POST">
+                <label for="user-name">
                     Your name:
-                <input type="text" name="user-name" placeholder="Your name" required>
                 </label>
+                <input id="user-name" type="text" name="user-name" placeholder="Your name" required>
                 <br>
-                <label>
+                <label for="user-email">
                     Your email:
-                <input type="email" name="user-email" placeholder="Your email" required>
                 </label>
-                <input class="button card-buttom" type="submit">
+                <input id="user-email" type="email" name="user-email" placeholder="Your email" required>
+                <input class="button card-button" type="submit">
             </form>
         </footer>
         <p>Some contacts</p>
